Added local resources (instead of CDN) for developement phase

--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Question Manager</title>
   <!-- Bootstrap Style Sheet -->
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="stylesheets/lib/bootstrap.css" />
   <!-- Stylesheet libraries for slider and input tags-->
   <link rel="stylesheet" href="stylesheets/lib/rzslider.min.css"/>
   <link rel="stylesheet" href="stylesheets/lib/ng-tags-input.min.css"/>
@@ -14,11 +14,14 @@
   <link rel="stylesheet" href="stylesheets/QuestionManager.css" />
 
   <!-- Angular JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.2/angular.min.js" charset="utf-8"></script>
+  <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js" charset="utf-8"></script>-->
+  <script src="javascripts/lib/angular.js"></script>
   <!-- Angular Route JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.2/angular-route.js" charset="utf-8"></script>
+  <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-route.js" charset="utf-8"></script>-->
+  <script src="javascripts/lib/angular-route.js"></script>
   <!-- Angular Animate for Bootstrap animation-->
-  <script src="https://code.angularjs.org/1.5.0-rc.2/angular-animate.min.js" charset="utf-8"></script>
+  <!--<script src="https://code.angularjs.org/1.5.3/angular-animate.min.js" charset="utf-8"></script>-->
+  <script src="javascripts/lib/angular-animate.js"></script>
   <!-- Angular range slider -->
   <script src="javascripts/lib/rzslider.min.js"></script>
   <script src="javascripts/lib/ng-tags-input.min.js"></script>
