Added Pattern Name Popup

--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -41,8 +41,8 @@
       </div>
       <div class="collapse navbar-collapse" id="navbar-content">
         <ul class="nav navbar-nav">
-          <li><a href="/">Edit Questions</a></li>
-          <li><a href="/#PatternSearch">Create Search Pattern</a></li>
+          <li><a class="active" href="/">Edit Questions</a></li>
+          <li><a ng-href="/#PatternSearch">Create Search Pattern</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
@@ -61,5 +61,6 @@
   <script src="javascripts/Controllers/indexController.js"> </script>
   <script src="javascripts/Controllers/editQuestionController.js"> </script>
   <script src="javascripts/Controllers/patternController.js"> </script>
+  <script src="javascripts/Controllers/patternModalController.js"> </script>
 </body>
 </html>
