--- a/Infinito-Qs/QuestionManagement/public/PatternSearch.html
+++ b/Infinito-Qs/QuestionManagement/public/PatternSearch.html
@@ -26,17 +26,17 @@
               Match Regular Expression <small>(Add patterns to filter out the search data)</small> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': regexCheck.open, 'glyphicon-chevron-right': !regexCheck.open}"></i>
             </uib-accordion-heading>
             <div class="form-group">
-              <div ng-repeat="item in regexPatterns">
+              <div ng-repeat="item in regexFields">
                  <label>Pattern {{item.value}}</label>
-                 <input type="text" ng-model="patterns[item.value]" name="pattern{{item.value}}"\>
+                 <input type="text" ng-model="regexPatterns[item.value]" name="pattern{{item.value}}"\>
                   <span ng-show="$last">
                     <a class="btn btn-primary btn-sm" ng-click="addField()"><b>+</b></a>
                   </span>
-                  <span ng-show="$last && regexPatterns.length>1">
+                  <span ng-show="$last && regexFields.length>1">
                     <a class="btn btn-danger btn-sm" ng-click="removeField()"><b>-</b></a>
                   </span>
               </div>
-              {{patterns}}
+              {{regexPatterns}}
             </div>
           </uib-accordion-group>
           <uib-accordion-group is-open="wikiCheck.open">
@@ -52,7 +52,7 @@
               <span ng-click="refreshSlider(gTrendsCheck.open)">Google Trends <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': gTrendsCheck.open, 'glyphicon-chevron-right': !gTrendsCheck.open}"></i></span>
             </uib-accordion-heading>
             <div class="form-group">
-              <rzslider rz-slider-model="gTrends.min" rz-slider-high="gTrends.max" rz-slider-options="gTrends.options"></rzslider>
+              <rzslider rz-slider-model="gTrendsRange.min" rz-slider-high="gTrendsRange.max" rz-slider-options="gTrendsRange.options"></rzslider>
             </div>
           </uib-accordion-group>
           <uib-accordion-group is-open="usageCheck.open">
@@ -60,7 +60,7 @@
               <span ng-click="refreshSlider(usageCheck.open)">Usage <small>(Number of times this question has been asked)</small><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': usageCheck.open, 'glyphicon-chevron-right': !usageCheck.open}"></i><span>
             </uib-accordion-heading>
             <div class="form-group">
-              <rzslider rz-slider-model="usage.min" rz-slider-high="usage.max" rz-slider-options="usage.options"></rzslider>
+              <rzslider rz-slider-model="usageRange.min" rz-slider-high="usageRange.max" rz-slider-options="usageRange.options"></rzslider>
             </div>
           </uib-accordion-group>
           <uib-accordion-group is-open="correctCheck.open">
@@ -68,7 +68,7 @@
               <span ng-click="refreshSlider(correctCheck.open)">Correctness <small>(Number of times the players have got the answer right)</small><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': correctCheck.open, 'glyphicon-chevron-right': !correctCheck.open}"></i></span>
             </uib-accordion-heading>
             <div class="form-group">
-              <rzslider rz-slider-model="correct.min" rz-slider-high="correct.max" rz-slider-options="correct.options"></rzslider>
+              <rzslider rz-slider-model="correctRange.min" rz-slider-high="correctRange.max" rz-slider-options="correctRange.options"></rzslider>
             </div>
           </uib-accordion-group>
         </uib-accordion>
@@ -93,4 +93,21 @@
       </form>
     </div>
   </div>
+
+  <script type="text/ng-template" id="tempModal.html">
+    <div class="modal-header">
+        <h3 class="modal-title">Give a name</h3>
+    </div>
+    <div class="modal-body">
+      <div class="form-group">
+        <input type="text" name="patternName" ng-model="patternName"/>
+      </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+        <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    </div>
+  </script>
+  {{patternName}}
+  <button type="button" class="btn btn-default" ng-click="onSavePattern()">Save Pattern</button>
 </main>
