--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -44,6 +44,8 @@
           <li><a href="/">Edit Questions</a></li>
           <li><a href="/#PatternSearch">Create Search Pattern</a></li>
         </ul>
+
+        <!-- <button type="button" ng-click=buttonclick() class="pull-left">More Questions</button> -->
         <ul class="nav navbar-nav navbar-right">
           <li>
             <a href="signout" class="pull-right">
