--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -42,7 +42,7 @@
       <div class="collapse navbar-collapse" id="navbar-content">
         <ul class="nav navbar-nav">
           <li><a class="active" href="/">Edit Questions</a></li>
-          <li><a ng-href="/#PatternSearch">Create Search Pattern</a></li>
+          <li><a ng-href="/#PatternSearch">Create Q-set</a></li>
         </ul>
 
         <!-- <button type="button" ng-click=buttonclick() class="pull-left">More Questions</button> -->
