Moved pattern to QM page

--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="stylesheets/lib/rzslider.min.css"/>
   <link rel="stylesheet" href="stylesheets/lib/ng-tags-input.min.css"/>
   <link rel="stylesheet" href="stylesheets/lib/ng-tags-input.bootstrap.min.css"/>
-
+  <link rel="stylesheet" href="stylesheets/lib/nga.min.css"/>
   <!-- Custom Style sheet -->
   <link rel="stylesheet" href="stylesheets/QuestionManager.css" />
 
@@ -40,10 +40,10 @@
         <a href="/" class="navbar-brand">Infinito Q</a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-content">
-        <ul class="nav navbar-nav">
+        <!--<ul class="nav navbar-nav">
           <li><a class="active" href="/">Edit Questions</a></li>
           <li><a ng-href="/#PatternSearch">Create Q-set</a></li>
-        </ul>
+        </ul>-->
 
         <!-- <button type="button" ng-click=buttonclick() class="pull-left">More Questions</button> -->
         <ul class="nav navbar-nav navbar-right">
