--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -43,13 +43,12 @@
         <ul class="nav navbar-nav">
           <li><a class="active" href="/">Edit Questions</a></li>
           <li><a ng-href="/#PatternSearch">Create Q-set</a></li>
+          <li><a ng-href="/QuestionPaperManager">Question Papers</a></li>
         </ul>
-
-        <!-- <button type="button" ng-click=buttonclick() class="pull-left">More Questions</button> -->
         <ul class="nav navbar-nav navbar-right">
           <li>
             <a href="signout" class="pull-right">
-              <span class="glyphicon glyphicon-log-out"></span> Log out
+              <span class="glyphicon glyphicon-log-out"></span>Log out
             </a>
           </li>
         </ul>
