--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="stylesheets/lib/ng-tags-input.min.css"/>
   <link rel="stylesheet" href="stylesheets/lib/ng-tags-input.bootstrap.min.css"/>
   <link rel="stylesheet" href="stylesheets/lib/nga.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/blue/pace-theme-minimal.css"/>
   <!-- Custom Style sheet -->
   <link rel="stylesheet" href="stylesheets/QuestionManager.css" />
 
@@ -22,6 +23,7 @@
   <!-- Angular Animate for Bootstrap animation-->
   <!--<script src="https://code.angularjs.org/1.5.3/angular-animate.min.js" charset="utf-8"></script>-->
   <script src="javascripts/lib/angular-animate.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js"></script>
   <!-- Angular range slider -->
   <script src="javascripts/lib/rzslider.min.js"></script>
   <script src="javascripts/lib/ng-tags-input.min.js"></script>
@@ -37,7 +39,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/" class="navbar-brand">Infinito Q</a>
+        <a href="javascript:window.location.reload(true)" class="navbar-brand">Infinito Q</a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-content">
         <!--<ul class="nav navbar-nav">
