--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -45,11 +45,9 @@
         <ul class="nav navbar-nav">
           <li><a class="active" href="/">Edit Questions</a></li>
           <li><a ng-href="/#PatternSearch">Create Q-set</a></li>
+            <li><a ng-href="/QuestionPaperManager">Question Papers</a></li>
         </ul>
 
-        <!-- <button type="button" ng-click=buttonclick() class="pull-left">More Questions</button> -->
-          <li><a ng-href="/QuestionPaperManager">Question Papers</a></li>
-        </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
             <a href="signout" class="pull-right">
@@ -68,5 +66,6 @@
   <script src="javascripts/Controllers/editQuestionController.js"> </script>
   <script src="javascripts/Controllers/patternController.js"> </script>
   <script src="javascripts/Controllers/patternModalController.js"> </script>
+  <script src="javascripts/Controllers/questionPaperController.js"> </script>
 </body>
 </html>
