Question Paper Delete Validation

--- a/Infinito-Qs/QuestionManagement/public/QuestionManager.html
+++ b/Infinito-Qs/QuestionManagement/public/QuestionManager.html
@@ -9,6 +9,10 @@
           <button class="btn btn-danger btn-block btn-landing" ng-click="selectBasic(false)">
             <span class="glyphicon glyphicon-flash"></span>Pattern Search
           </button>
+          <br/>
+          <a class="btn btn-success btn-block btn-landing anchorButton" href="/#QuestionPaperManager">
+            <span class="glyphicon glyphicon-th-list"></span> Manage Question Papers
+          </a>
         </div>
       </div>
     </div>
