--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -39,15 +39,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="javascript:window.location.reload(true)" class="navbar-brand">Infinito Q</a>
+        <a href="/" class="navbar-brand">Infinito Q</a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-content">
-        <ul class="nav navbar-nav">
-          <li><a class="active" href="/">Edit Questions</a></li>
-          <li><a ng-href="/#PatternSearch">Create Q-set</a></li>
-            <li><a ng-href="/QuestionPaperManager">Question Papers</a></li>
-        </ul>
-
         <ul class="nav navbar-nav navbar-right">
           <li>
             <a href="signout" class="pull-right">
